--- a/PoolToolWebApp-my_new_branch/requirements.txt
+++ b/PoolToolWebApp-my_new_branch/requirements.txt
@@ -1,10 +1,17 @@
+asn1crypto==0.24.0
 certifi==2018.10.15
+cffi==1.11.5
 chardet==3.0.4
+cryptography==2.3.1
 Django==1.11.16
 django-angular==2.0.3
 django-salesforce==0.7.2
 idna==2.7
+pycparser==2.19
+pyOpenSSL==18.0.0
 pytz==2018.6
 requests==2.20.0
+simple-salesforce==0.74.2
 simplejson==3.16.0
+six==1.11.0
 urllib3==1.24
